practica 2/filtros/iptables
# Generated by iptables-save v1.4.21 on Thu Mar  4 14:29:54 2021
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [1:76]
#OpenVPN
-A INPUT -i enp0s3 -j ACCEPT
-A OUTPUT -o enp0s3 -j ACCEPT

#Loopback
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

#Permitir hacer ping desde pasarela.
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

#Permitir a las máquinas de la red interna hacer ping con la pasarela.
-A INPUT -i enp0s8 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -o enp0s8 -p icmp -m icmp --icmp-type 0 -j ACCEPT

#DNS
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT

#HTTP
-A INPUT -p tcp -m tcp --sport 80 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT

#HTTPS 
-A INPUT -p tcp -m tcp --sport 443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT

#CAMPUS VIRTUAL
-A INPUT -p tcp -m tcp --sport 8443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 8443 -j ACCEPT

#SSH/SFTP INTERNO
-A INPUT -i enp0s8 -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -o enp0s8 -p tcp -m tcp --sport 22 -j ACCEPT

#SSH/SFTP A NEPTUNO
-A INPUT -s 10.110.1.29/32 -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -d 10.110.1.29/32 -p tcp -m tcp --dport 22 -j ACCEPT

#MÁQUINA INTERNA PUEDE LANZAR PING
-A FORWARD -s 10.110.34.0/24 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FORWARD -d 10.110.34.0/24 -p icmp -m icmp --icmp-type 0 -j ACCEPT

#MÁQUINA INTERNA NO RECIBE SOLICITUDES DE PING

#MÁQUINA INTERNA PUEDE ACCEDER A DNS
-A FORWARD -s 10.110.34.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -d 10.110.34.0/24 -p udp -m udp --sport 53 -j ACCEPT

#MÁQUINA INTERNA PUEDE ACCEDER A HTTP
-A FORWARD -s 10.110.34.0/24 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -d 10.110.34.0/24 -p tcp -m tcp --sport 80 -j ACCEPT

#MÁQUINA INTERNA PUEDE ACCEDER A HTTPS
-A FORWARD -s 10.110.34.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -d 10.110.34.0/24 -p tcp -m tcp --sport 443 -j ACCEPT

#MÁQUINA INTERNA PUEDE ACCEDER AL CAMPUS VIRTUAL
-A FORWARD -s 10.110.34.0/24 -p tcp -m tcp --dport 8443 -j ACCEPT
-A FORWARD -d 10.110.34.0/24 -p tcp -m tcp --sport 8443 -j ACCEPT

#MÁQUINA INTERNA PUEDE HACER SSH CON NEPTUNO
-A FORWARD -s 10.110.34.0/24 -d 10.110.1.29/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 10.110.1.29/32 -d 10.110.34.0/24 -p tcp -m tcp --sport 22 -j ACCEPT

#PASARELA HACE LOG DE INTENTO DE SSH/SFTP
-A INPUT -i tap0 -p tcp -m tcp --dport 22 -j LOG --log-prefix "Se ha intentado hacer ssh/sft"

COMMIT
# Completed on Thu Mar  4 14:29:54 2021
